--- a/MTS-landing-1/index.html
+++ b/MTS-landing-1/index.html
@@ -144,6 +144,29 @@
 HR и безопасность.
           </p>
 
+          <span class="employees line">
+            <div class="column">
+              <div class="employee"></div>
+              <div class="black-letters-28px">Имя Фамилия</div>
+              <div class="medium-letters">Должность</div>
+            </div>
+            <div class="column">
+              <div class="employee"></div>
+              <div class="black-letters-28px">Имя Фамилия</div>
+              <div class="medium-letters">Должность</div>
+            </div>
+            <div class="column">
+              <div class="employee"></div>
+              <div class="black-letters-28px">Имя Фамилия</div>
+              <div class="medium-letters">Должность</div>
+            </div>
+            <div class="column">
+              <div class="employee"></div>
+              <div class="black-letters-28px">Имя Фамилия</div>
+              <div class="medium-letters">Должность</div>
+            </div>
+          </span>
+
 
         </div>
         
