--- a/MTS-landing-1/index.html
+++ b/MTS-landing-1/index.html
@@ -119,30 +119,30 @@
         </div>
 
         <div class="our-team">
-          <p class="black-letters">Наша</p>
-          <p class="blue-letters">команда</p>
 
+          <div class="h-row">
 
-          <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10" fill="none">
-            <g clip-path="url(#clip0_512_232)">
-              <path d="M10 4.2854L7.85715 4.2854L9.28573 1.42827L7.14287 1.42827L5.71429 4.2854L5.71429 8.57111L10 8.57111L10 4.2854Z" fill="#002ED0"/>
-              <path d="M4.28564 8.57111L4.28564 4.2854L2.14279 4.2854L3.57137 1.42827L1.42852 1.42827L-6.39983e-05 4.2854L-6.4373e-05 8.57111L4.28564 8.57111Z" fill="#002ED0"/>
-            </g>
-            <defs>
-              <clipPath id="clip0_512_232">
-                <rect width="10" height="10" fill="white" transform="translate(10 10) rotate(-180)"/>
-              </clipPath>
-            </defs>
-          </svg>
-          <svg xmlns="http://www.w3.org/2000/svg" width="529" height="2" viewBox="0 0 529 2" fill="none">
-            <path d="M1 1L528 1" stroke="#002ED0" stroke-linecap="round"/>
-          </svg>
-          <p class="small-letters">
-            Все это благодаря небольшой, но очень сильной
-и эффективной команде. И чтобы расти дальше, любой компании нужно усиливать её со всех сторон. В компании должна быть сильная команда IT,
-сильная бухгалтерская и юридическая часть,
-HR и безопасность.
-          </p>
+            <div class="column">
+              <p class="black-letters">Наша</p>
+              <p class="blue-letters">команда</p>
+            </div>
+
+          <div class="column">
+            <div class="row">
+              <img src="./images/q-quote.svg">
+              <img src="./images/q-line.svg" class="caption-2">
+            </div>
+            <p class="small-letters caption-2">
+              Все это благодаря небольшой, но очень сильной
+  и эффективной команде. И чтобы расти дальше, любой компании нужно усиливать её со всех сторон. В компании должна быть сильная команда IT,
+  сильная бухгалтерская и юридическая часть,
+  HR и безопасность.
+            </p>
+          </div>
+
+            <img src="./images/team.svg">
+
+            </div>
 
           <span class="employees line">
             <div class="column">
@@ -170,7 +170,65 @@ HR и безопасность.
 
         </div>
         
-        <div class="company-group"></div>
+        <div class="company-group">
+          <div class="h-row">
+
+            <div class="column">
+              <p class="black-letters">Группа</p>
+              <p class="blue-letters">компаний</p>
+            </div>
+
+          <div class="column">
+            <div class="row">
+              <img src="./images/q-quote.svg">
+              <img src="./images/q-line.svg" class="caption-2">
+            </div>
+            <p class="small-letters caption-2">
+              Нами было принято решение о создании группы компаний, которая будет сопровождать наши ведущие компании, а также работать на внешнего клиента. Сегодня в нашей группе 8 компаний, работающих в разных направлениях.
+            </p>
+          </div>
+
+            <img src="./images/team.svg">
+
+          </div>
+          
+          <div class="line top-line">
+            <div class="square">
+              <img src="./images/icons/ITS 3.svg" class="bottom right">
+              <img src="./images/shadow.svg" class="bottom-right">
+            </div>
+            <div class="square">
+              <img src="./images/icons/мтс 1.svg" class="bottom right">
+              <img src="./images/shadow.svg" class="bottom-right">
+            </div>
+            <div class="square">
+              <img src="./images/icons/M3.svg" class="bottom right">
+              <img src="./images/shadow.svg" class="bottom-right">
+            </div>
+            <div class="square">
+              <img src="./images/icons/стройка 1.svg" class="bottom right">
+              <img src="./images/shadow.svg" class="bottom-right">
+            </div>
+          </div>
+          <div class="line bottom-line">
+            <div class="square">
+              <img src="./images/icons/it_1.svg" class="bottom right">
+              <img src="./images/shadow.svg" class="bottom-right">
+            </div>
+            <div class="square">
+              <img src="./images/icons/пк 1.svg" class="bottom right">
+              <img src="./images/shadow.svg" class="bottom-right">
+            </div>
+            <div class="square">
+              <img src="./images/icons/капитал 1.svg" class="bottom right">
+              <img src="./images/shadow.svg" class="bottom-right">
+            </div>
+            <div class="square">
+              <img src="./images/icons/тендер 1.svg" class="bottom right">
+              <img src="./images/shadow.svg" class="bottom-right">
+            </div>
+          </div>
+        </div>
 
         <div class="contacts"></div>
 
